<resources>
    <string name="app_name">Quokka</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Klick for visiting the garden of words</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello Quokka Lover!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toast_button_text">Whats up?</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="default_text_name">Nief</string>
    <string name="default_text_greeting">Hi, this is second fragment and it shows nothin yet</string>
    <string name="number_output">0</string>
    <string name="katzenalarm">katzenalarm</string>

    <string name="click_katze">Miauuuuu</string>
    <string name="showsGarden">showsGarden</string>


</resources>
